tests/negative/typecheck/arg_named_not_annot.orng
// arg_named_not_annot.orng:7:9: error: expected an named argument, got `[`
//     f(y[2] = 5)
//        ^
// 
fn main() -> Int {
    let mut y: [2]Int
    f(y[2] = 5)
    0
}

fn f(x: Int) -> Int { 4 }